--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ body, html {
     height: 100%;
     flex-direction: column;
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     /* font size */
     font-size: 3rem;
     margin-top: 0.5rem;
@@ -70,7 +70,7 @@ z-index: 999;
 position: absolute;
 bottom: 0.5rem;
 color: white;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 /* font size */
 font-size: 3rem;
 display: flex;
