--- a/src/style.css
+++ b/src/style.css
@@ -79,3 +79,98 @@ align-items: center;
 width: 100%;
 z-index: 999;
 }
+
+label {
+font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color:white;
+font-size: 1.5rem;
+
+}
+
+/* style for date input 
+    big input field with a white border and a transparent background */
+input[type="date"] {
+    width: 10rem;
+    height: 2rem;
+    border: 2px solid white;
+    background-color: transparent;
+    color: white;
+    font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.25rem;
+    /* rounded border*/
+    /* only border at bottom*/
+    border-bottom: 2px solid white;
+    /* no border at top, left and right */
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+input {
+    width: 10rem;
+    height: 2rem;
+    border: 2px solid white;
+    background-color: transparent;
+    color: white;
+    font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.25rem;
+    border-bottom: 2px solid white;
+    /* no border at top, left and right */
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+/* output should not have a border*/
+#output {
+    border: none;
+    background-color: transparent;
+    color: white;
+    font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.25rem;
+}
+
+#create-container {
+    /* center whole content on the site*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* flex column */
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    
+}
+
+button {
+    width: 5rem;
+    /* fancy button style **/
+    background-color: #6ea5ff;
+    color: white;
+    border: 2px solid white;
+    font-family: "Shadows Into Light Two", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.25rem;
+    /* rounded border */
+    border-radius: 5px;
+    /* pointer cursor */
+    cursor: pointer;
+}
+
+/* button hover and active animation */
+button:hover {
+    background-color: white;
+    color: #6ea5ff;
+    transition: 0.5s;
+}
+
+button:active {
+    background-color: #6ea5ff;
+    color: white;
+    transition: 0.5s;
+}
+
+a {
+    /* darker blue*/
+    color: #1d4cb1 !important;
+}
