--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,13 @@
+html {
+/* make text not selectable */
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
 
+}
 
 .petal {
     position: absolute;
